<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include layout="@layout/toolbar" />-->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/status_bar_height"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="0dp"
                android:text="@string/chooseOneMethod" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/qrcode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/add_child_with_code" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.andexert.library.RippleView
                    android:id="@+id/btnScan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rc_button"
                    android:gravity="center_vertical"
                    android:visibility="visible"
                    ripple:rv_centered="true"
                    ripple:rv_color="@color/ripple"
                    ripple:rv_rippleDuration="200">

                    <!--<LinearLayout-->
                    <!--android:id="@+id/btnScan"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/rc_button"-->
                    <!--android:gravity="center_vertical"-->
                    <!--&gt;-->

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/add_child_with_code_confirm"
                        android:textColor="@android:color/white" />


                    <!--</LinearLayout>-->

                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    android:id="@+id/btnCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rc_button"
                    android:gravity="center_vertical"
                    android:visibility="visible"
                    ripple:rv_centered="true"
                    ripple:rv_color="@color/ripple"
                    ripple:rv_rippleDuration="200">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/add_child_without_code_confirm"
                        android:textColor="@android:color/white" />


                </com.andexert.library.RippleView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/ic_action_about" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/add_child_without_code" />
                </LinearLayout>

                <com.andexert.library.RippleView
                    android:id="@+id/btnInputInfo"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rc_button"
                    android:gravity="center_vertical"
                    android:visibility="visible"

                    ripple:rv_centered="true"
                    ripple:rv_color="@color/ripple"
                    ripple:rv_rippleDuration="200">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/add_child_input_info_confirm"
                        android:textColor="@android:color/white" />

                </com.andexert.library.RippleView>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <!--<TextView-->
    <!--android:id="@+id/txtMessage"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center" />-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/account_search" />

                <TextView
                    android:id="@+id/txtWhoIsTrackingMyChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/add_child_show_parents_information" />
            </LinearLayout>

            <com.andexert.library.RippleView
                android:id="@+id/btnShowParent"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rc_button"
                android:gravity="center_vertical"
                android:visibility="visible"
                ripple:rv_centered="true"
                ripple:rv_color="@color/ripple"
                ripple:rv_rippleDuration="200">

                <!--<LinearLayout-->
                <!--android:id="@+id/btnShowParent"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="42dp"-->
                <!--android:layout_marginTop="0dp"-->
                <!--android:background="@drawable/rc_button"-->
                <!--android:gravity="center_vertical"-->
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/add_child_show_parents"
                    android:textColor="@android:color/white" />

                <!--</LinearLayout>-->
            </com.andexert.library.RippleView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>