<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!--<include layout="@layout/toolbar" />-->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:text="@string/input_info_title"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnType"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/school_button"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/txtType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1.選擇類型"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_action_expand_dark" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnCounty"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/school_button"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/txtCountyName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="2.選擇縣市"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="4dp"
                        android:src="@drawable/ic_action_expand_dark" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSchool"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/school_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/txtSchoolName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="3.選擇學校"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_action_expand_dark" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtStudentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/input_info_student_number"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/txtStudentSN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/input_info_sn"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/txtRelation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/code_hint_input_relation"
                android:inputType="text"
                android:maxLines="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.andexert.library.RippleView
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rc_button"
                android:elevation="4dp"
                android:gravity="center"
                ripple:rv_centered="true"
                ripple:rv_color="@color/ripple"
                ripple:rv_rippleDuration="300">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/code_button_ok"
                    android:textColor="@android:color/white" />

            </com.andexert.library.RippleView>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>